<resources>
    <string name="all">All</string>
    <string name="arg_difficulty">Difficulty</string>
    <string name="arg_generation1">Generation1</string>
    <string name="arg_generation2">Generation2</string>
    <string name="arg_generation3">Generation3</string>
    <string name="arg_generation4">Generation4</string>
    <string name="arg_multiple_select">MultipleSelect</string>
    <string name="arg_pokemon">PassedPokemon</string>
    <string name="app_name">Who\'s That Pokemon</string>
    <string name="attack">Attack:</string>
    <string name="average_game_time">Average Time:</string>
    <string name="back">Back</string>
    <string name="brutal">Brutal</string>
    <string name="catch_rate">Catch Rate: </string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_data_message">Are you sure you want to clear data? This will not clear your stats, but you will have to pull data before playing again.</string>
    <string name="clear_stats">Clear Stats</string>
    <string name="clear_stats_message">Are you sure you want to clear your stats? This is irreversible.</string>
    <string name="color">Color:</string>
    <string name="continu">Continue</string>
    <string name="current_progress">curPro</string>
    <string name="defense">Defense: </string>
    <string name="easy">Easy</string>
    <string name="evolution_number">Evolution Number: </string>
    <string name="family_members">Family Members: </string>
    <string name="games_lost">Games Lost:</string>
    <string name="games_played">Games Played:</string>
    <string name="games_won">Games Won:</string>
    <string name="generation_1">Generation 1</string>
    <string name="generation_2">Generation 2</string>
    <string name="generation_3">Generation 3</string>
    <string name="generation_4">Generation 4</string>
    <string name="generation_5">Generation 5</string>
    <string name="generation_6">Generation 6</string>
    <string name="generation_7">Generation 7</string>
    <string name="generation_8">Generation 8</string>
    <string name="generations">Generation(s): </string>
    <string name="guesses">Guesses:</string>
    <string name="hard">Hard</string>
    <string name="height">Height: </string>
    <string name="hp">HP: </string>
    <string name="intermediate">Medium</string>
    <string name="least_guesses">Least Guesses:</string>
    <string name="most_guesses">Most Guesses:</string>
    <string name="most_played">Most Played Pokemon:</string>
    <string name="name">Name: </string>
    <string name="nickname">Nickname: </string>
    <string name="no">No</string>
    <string name="number">Number: </string>
    <string name="number_abbr">No.</string>
    <string name="ok">OK</string>
    <string name="play_again">Play Again\nSame Settings</string>
    <string name="play_again_different_settings">Play Again\nDifferent Settings</string>
    <string name="play_whos_that_pokemon">Play Who\'s That Pokemon</string>
    <string name="please_wait">Please wait while the data downloads</string>
    <string name="pokemon_lookup">Pokemon Lookup</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="preference_file_key">com.tomcat.mobile.whosthatpokemon.PREFERENCES</string>
    <string name="previous_guesses">Previous Guesses</string>
    <string name="progress_bar">Progress: curPro of 7</string>
    <string name="pull_data">Pull Data</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="return_home">Return Home</string>
    <string name="settings">Settings</string>
    <string name="sp_atk">Sp. Atk.: </string>
    <string name="sp_def">Sp. Def.: </string>
    <string name="speed">Speed: </string>
    <string name="stats">Stats</string>
    <string name="time_in_game">Time in Game:</string>
    <string name="time_remaining">Time Remaining: </string>
    <string name="title_activity_difficulty_select">DifficultySelect</string>
    <string name="total_guesses">Total Guesses:</string>
    <string name="type">Type: </string>
    <string name="weight">Weight: </string>
    <string name="win_percentage">Win Percentage:</string>
    <string name="valid_guesses">Valid Guesses:</string>
    <string name="version">Version: </string>
    <string name="version_history">Version History</string>
    <string name="yes">Yes</string>
</resources>